fix: issues with switching from system default theme, dark mode print issue
* Use `resolvedTheme` instead of `theme` to ensure toggling makes sense
* Force `color-scheme` to light when printing

Refs: #3

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,14 @@
 @tailwind utilities;
 
 
- @page {
+@page {
   size: auto;
   margin: 2cm;
 } 
+
+/* Force color scheme light when printing to avoid issues with the footer being dark */
+@media print { 
+  html {
+    color-scheme: light !important;
+  }
+}
